--- a/tr.gov.uyap.Editor.yaml
+++ b/tr.gov.uyap.Editor.yaml
@@ -37,18 +37,17 @@ modules:
   - name: uyapeditor
     buildsystem: simple
     build-commands:
-      - mkdir /app/bin,
+      - mkdir /app/bin
       - ln -s /app/jre/bin/java /app/bin/java
       - install -Dm644 tr.gov.uyap.Editor.png /app/share/icons/hicolor/128x128/apps/tr.gov.uyap.Editor.png
       - install -Dm644 tr.gov.uyap.Editor.desktop /app/share/applications/tr.gov.uyap.Editor.desktop
       - install -Dm644 tr.gov.uyap.Editor.Template.desktop /app/share/applications/tr.gov.uyap.Editor.Template.desktop
       - install -Dm644 tr.gov.uyap.Editor.metainfo.xml /app/share/appdata/tr.gov.uyap.Editor.metainfo.xml
-      - unzip pardus541230-12-20241-59-pm.zip && cd uyap_pardus_5_4_12_amd64
-      - ar -x uyapeditor_5.4.12_amd64.deb data.tar.xz
-      - tar -xf data.tar.xz ./usr
+      - ar x uyapeditor_5.4.12_amd64.deb
+      - tar -xf data.tar.zst ./usr
       - cp -r usr/share/* /app/share/
-      - sed -i 's\/\\\/usr\\\/share\/\\\/app\\\/share\/g' /app/share/UYAPEditor/dokuman.sh
-      - sed -i 's\/\\\/usr\\\/share\/\\\/app\\\/share\/g' /app/share/UYAPEditor/sablon.sh
+      - sed -i 's/\/usr\/share/\/app\/share/g' /app/share/UYAPEditor/dokuman.sh
+      - sed -i 's/\/usr\/share/\/app\/share/g' /app/share/UYAPEditor/sablon.sh
       - ln -s /app/share/UYAPEditor/dokuman.sh /app/bin/uyapeditor
       - ln -s /app/share/UYAPEditor/sablon.sh /app/bin/uyapsablon
     sources:
