sandbox home - allow documents

--- a/tr.gov.uyap.Editor.yaml
+++ b/tr.gov.uyap.Editor.yaml
@@ -14,7 +14,8 @@ finish-args:
   - "--socket=pcsc"
   - "--socket=cups"
   - "--device=dri"
-  - "--filesystem=home"
+  - "--filesystem=xdg-documents"
+  - "--persist=."
   - "--env=JAVA_HOME=/app/jre"
 
 cleanup:
